Fix the wrapped class

--- a/src/components/SiteHeader/SiteHeaderSocial.scss
+++ b/src/components/SiteHeader/SiteHeaderSocial.scss
@@ -57,8 +57,6 @@
 		}
 
 		&-tooltip {
-			$last-tooltip-cutoff: 1080px;
-
 			position: absolute;
 			visibility: hidden;
 			padding: 0 12px;
@@ -75,6 +73,10 @@
 			border-radius: 5px;
 			white-space: nowrap;
 
+			// Ensure the last tooltip is still visible when we get close to the
+			// edge of the viewport. NOTE: the cut-off requires manual tuning but
+			// shouldn't be a problem unless the .wrapped class changes its values.
+			$last-tooltip-cutoff: 1130px;
 			@media screen and (width < $last-tooltip-cutoff) {
 				&--last {
 					left: 100%;
